--- a/src/app/deposit/deposit.component.html
+++ b/src/app/deposit/deposit.component.html
@@ -42,17 +42,10 @@
   <form [formGroup]="form" (ngSubmit)="generatePayment()">
     <label for="amount">Amount (USDT BEP20 Network Only) *</label>
     <!-- <input id="amount" class="form-control" type="number" formControlName="amount" min="1" step="0.01" /> -->
-    <input id="amount" 
-       class="form-control" 
-       type="text" 
-       formControlName="amount" 
-       min="1" 
-       placeholder="Enter Amount"
+    <input id="amount" class="form-control" type="text" formControlName="amount" min="12" placeholder="Enter Amount"
        (input)="formatAmount($event)" />
-
-
     <div *ngIf="form.get('amount')?.invalid && form.get('amount')?.touched" class="text-danger">
-      Amount is required and must be ≥ 1
+      Amount is required and must be ≥ $12
     </div>
     <button type="submit" class="btn btn-sm btn-danger mt-2" [disabled]="submitting">
       {{ submitting ? 'Generating…' : 'Confirm' }}
@@ -80,13 +73,10 @@
       Share on WhatsApp
     </button>
   </div> -->
-<div *ngIf="alertMessage" class="mt-3">
-  <div class="alert alert-{{alertType}} alert-dismissible fade show" role="alert">
-    {{ alertMessage }}
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"
-      (click)="alertMessage = ''"></button>
-  </div>
+<div *ngIf="alertMessage" [ngClass]="'alert alert-' + alertType">
+  {{ alertMessage }}
 </div>
+
 
 
   <button (click)="checkPaymentStatus()" [disabled]="checkingStatus" class="btn btn-success mt-2">
