--- a/src/app/tree-view/tree-view.component.html
+++ b/src/app/tree-view/tree-view.component.html
@@ -121,6 +121,9 @@
    style="cursor: pointer; font-size: 28px; color:#007bff"
    (click)="printTable()">
 </i>
+ <i class="fa-solid fa-download mx-5 mt-1"
+     style="cursor: pointer; font-size: 30px; color:green"
+     (click)="downloadPDF()"></i>
 
 <!-- Organization Chart -->
 <div id="orgChartToPrint">
