--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -96,11 +96,23 @@
         
             <div class="text-end">
               <button class="btn btn-danger me-2" type="button" (click)="edit()" *ngIf="!isEdit">Edit</button>
-              <button class="btn btn-success me-2" type="button" (click)="save()" *ngIf="isEdit">Save</button>
+              <div *ngIf="!showOtpForm">
+  <button class="btn btn-success" type="button" (click)="save()" *ngIf="isEdit">Save</button>
+</div>
             </div>
           </div>
         </form>
-
+<!-- OTP Verification -->
+<div *ngIf="showOtpForm">
+  <form [formGroup]="form1">
+    <div class="mb-3">
+      <label>Enter OTP</label>
+      <input type="text" class="form-control" formControlName="otp">
+    </div>
+    <button class="btn btn-primary me-2" type="button" (click)="verifyOtpAndSave()">Verify & Save</button>
+    <button class="btn btn-secondary" type="button" (click)="showOtpForm=false">Cancel</button>
+  </form>
+</div>
       </div>
     </div>
   </div>
